results/classifier/111/review/1801073
PID: 0.094
other: 0.093
graphic: 0.078
network: 0.077
permissions: 0.077
semantic: 0.077
socket: 0.076
KVM: 0.068
files: 0.066
vnc: 0.064
device: 0.062
performance: 0.058
debug: 0.056
boot: 0.056
debug: 0.384
files: 0.158
semantic: 0.104
performance: 0.079
PID: 0.054
other: 0.043
boot: 0.041
device: 0.039
vnc: 0.020
network: 0.018
socket: 0.017
graphic: 0.016
permissions: 0.015
KVM: 0.013

util/zbin.c:390:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]

For qemu-3.0.0 I see with GCC 9 compiler a new warning:

$ make -j1 -C roms pxerom VERBOSE=1 V=1
make: Entering directory '/home/abuild/rpmbuild/BUILD/qemu-3.0.0/roms'
make -C ipxe/src CONFIG=qemu \
	PACKAGING_TIMESTAMP=1534273834 \
	CROSS_COMPILE= \
	bin/8086100e.rom bin/808610d3.rom bin/80861209.rom bin/10500940.rom bin/10222000.rom bin/10ec8139.rom bin/1af41000.rom bin/15ad07b0.rom
make[1]: Entering directory '/home/abuild/rpmbuild/BUILD/qemu-3.0.0/roms/ipxe/src'
gcc  -Wall -W -Wformat-nonliteral -O2 -g -Werror util/zbin.c -llzma -o util/zbin
util/zbin.c: In function 'process_zinfo_add':
util/zbin.c:390:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  390 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ), size,
      |                                     ^~~
util/zbin.c:398:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  398 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ), size,
      |                                     ^~~
util/zbin.c:419:37: error: absolute value function 'abs' given an argument of type 'long int' but has parameter of type 'int' which may cause truncation of value [-Werror=absolute-value]
  419 |      ( ( addend < 0 ) ? "-" : "" ), abs ( addend ),
      |                                     ^~~
cc1: all warnings being treated as errors
make[1]: *** [Makefile.housekeeping:1368: util/zbin] Error 1

This bug would be better reported to the upstream for the ipxe rom -- we just ship the source code because we ship the binary.


Thank you, I contacted IPXE folks.

Should be fixed here:
http://git.ipxe.org/ipxe.git/commitdiff/956f6a722

Btw. how do you pull changes from ipxe into qemu repo?

On Mon, 21 Jan 2019 at 12:47, Martin Liska <email address hidden> wrote:
>
> Should be fixed here:
> http://git.ipxe.org/ipxe.git/commitdiff/956f6a722
>
> Btw. how do you pull changes from ipxe into qemu repo?

The next step is a QEMU patch which updates our git submodule
to point at a version of IPXE with the fix and also has the
pre-built binaries corresponding to that new version.

Gerd, it looks like you did the last IPXE update -- could
we do another one with this fix in it?

thanks
-- PMM


On Mon, Jan 21, 2019 at 12:57:16PM +0000, Peter Maydell wrote:
> On Mon, 21 Jan 2019 at 12:47, Martin Liska <email address hidden> wrote:
> >
> > Should be fixed here:
> > http://git.ipxe.org/ipxe.git/commitdiff/956f6a722
> >
> > Btw. how do you pull changes from ipxe into qemu repo?
> 
> The next step is a QEMU patch which updates our git submodule
> to point at a version of IPXE with the fix and also has the
> pre-built binaries corresponding to that new version.
> 
> Gerd, it looks like you did the last IPXE update -- could
> we do another one with this fix in it?

Yes, makes sense to do that, last ipxe rebase was more than a year ago.

cheers,
  Gerd



In QEMU commit fd813c72392a712022d5d75a9 we upgraded our ipxe, so this bug should now be fixed in git master and in the upcoming 4.0 release.


